# Proyecto_Fin_Master_NTTData

./: .gitignore  README.md
app/: Dockerfile  app.py  pyproject.toml  requirements.txt
ia/: icu_predictive_model_.ipynb
notebooks/: 00_obtencion_datos_raw.ipynb  01_ingesta_bronze.ipynb  01b_calidad_bronze.ipynb  02_exploracion_eda.ipynb  03_procesamiento_silver.ipynb  03b_recuperacion_cuarentena.ipynb  04_star_schema_powerbi_ai.ipynb  pipeline_ejecucion.json  pipeline_todos_notebooks.json
