[project]
name = "medicalchat"
version = "1.0.0"
description = "Sistema UCI - Portal de Información y Asistente Virtual con IA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "duckdb>=0.9.0",
    "openai>=1.0.0",
    "pandas>=1.5.0",
    "adlfs>=2023.0.0",
    "azure-identity>=1.14.0",
    "python-dotenv>=1.0.0",
]
